--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,10 @@ readme = "README.md"
 authors = ["Noah Shomette <git@noahshomette.me>"]
 repository = "https://github.com/NoahShomette/bevy_sparse_tilemap"
 
+[workspace]
+members = ["crates/bevy_sparse_tilemap_derive"]
+resolver = "2"
+
 [features]
 default = []
 bevy_fast_tilemap = ["dep:bevy_fast_tilemap"]
@@ -24,6 +28,7 @@ opt-level = 3
 
 [dependencies]
 bevy = { version = "0.10", default-features = false, features = [] }
+bevy_sparse_tilemap_derive = {path = "crates/bevy_sparse_tilemap_derive"}
 grid = "0.10.0"
 
 # Optional feature based dependencies
