--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,6 +34,7 @@ grid = "0.10.0"
 # Optional feature based dependencies
 # Rendering with bevy_fast_tilemap
 bevy_fast_tilemap = { version = "0.4.2", optional = true }
+thiserror = "1.0.44"
 
 
 [dev-dependencies]
