--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,11 +34,11 @@ thiserror = "1.0.44"
 
 # Optional feature based dependencies
 # Rendering with bevy_fast_tilemap
-bevy_fast_tilemap = { version = "0.5.0", optional = true }
+bevy_fast_tilemap = { git = "https://github.com/Droggelbecher/bevy-fast-tilemap.git", branch = "fix/honor-global-transform", optional = true }
 
 
 [dev-dependencies]
-bevy_fast_tilemap = { version = "0.5.0" }
+bevy_fast_tilemap = { git = "https://github.com/Droggelbecher/bevy-fast-tilemap.git",branch = "fix/honor-global-transform" }
 bevy = { version = "0.11.0" }
 rand = {version = "0.8.5"}
 bevy-inspector-egui = "0.19.0"
