--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,13 @@
 [package]
 name = "bevy_sparse_tilemap"
+description = "A Tilemap crate for the Bevy game engine with a focus on large map sizes and ECS sparse maps"
 version = "0.0.1"
 edition = "2021"
 license = "MIT OR Apache-2.0"
 readme = "README.md"
 authors = ["Noah Shomette <git@noahshomette.me>"]
 repository = "https://github.com/NoahShomette/bevy_sparse_tilemap"
+homepage = "https://github.com/NoahShomette/bevy_sparse_tilemap"
 
 [workspace]
 members = ["crates/bevy_sparse_tilemap_derive"]
