--- a/crates/bst_map_layer_derive/Cargo.toml
+++ b/crates/bst_map_layer_derive/Cargo.toml
@@ -1,5 +1,6 @@
 [package]
 name = "bst_map_layer_derive"
+description = "Simple map layer derive crate for [Bevy_Sparse_Tilemap](https://github.com/NoahShomette/bevy_sparse_tilemap)"
 version = "0.1.0"
 edition = "2021"
 license = "MIT OR Apache-2.0"
