--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,7 +30,7 @@ opt-level = 3
 
 [dependencies]
 bevy = { version = "0.11", default-features = false, features = [] }
-bst_map_layer_derive = {path = "crates/bst_map_layer_derive", version = "0.1.0"}
+bst_map_layer_derive = {version = "0.1.0"}
 grid = "0.10.0"
 thiserror = "1.0.44"
 
