--- a/Cargo.toml
+++ b/Cargo.toml
@@ -43,3 +43,5 @@ bevy_fast_tilemap = { version = "0.5.1" }
 bevy = { version = "0.11.0" }
 rand = {version = "0.8.5"}
 bevy-inspector-egui = "0.19.0"
+serde = "1.0.183"
+ron = "0.8.0"
