--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "bevy_sparse_tilemap"
 description = "A Tilemap crate for the Bevy game engine with a focus on large map sizes and ECS sparse maps"
-version = "0.0.1"
+version = "0.1.0"
 edition = "2021"
 license = "MIT OR Apache-2.0"
 readme = "README.md"
@@ -15,7 +15,7 @@ resolver = "2"
 
 [features]
 default = []
-bevy_fast_tilemap = ["dep:bevy_fast_tilemap"]
+# bevy_fast_tilemap = ["dep:bevy_fast_tilemap"]
 serde = ["dep:serde", "serde/default", "bevy/serialize"]
 
 [badges]
@@ -30,20 +30,20 @@ opt-level = 1
 opt-level = 3
 
 [dependencies]
-bevy = { version = "0.11", default-features = false, features = [] }
-bst_map_layer_derive = {version = "0.1.0"}
+bevy = { version = "0.13.0", default-features = false, features = [] }
+bst_map_layer_derive = { version = "0.1.0" }
 thiserror = "1.0.44"
 
 # Optional feature based dependencies
-# Rendering with bevy_fast_tilemap
-bevy_fast_tilemap = { version = "0.5.1", optional = true }
+# Rendering with bevy_fast_tilemap - Removed for now since we dont actually do anything with it
+# bevy_fast_tilemap = { version = "0.5.1", optional = true }
 serde = { version = "1.0.183", optional = true }
 
 
 [dev-dependencies]
-bevy_fast_tilemap = { version = "0.5.1" }
-bevy = { version = "0.11.0" }
-rand = {version = "0.8.5"}
-bevy-inspector-egui = "0.19.0"
+bevy_fast_tilemap = { version = "0.7.0" }
+bevy = { version = "0.13.0" }
+rand = { version = "0.8.5" }
+bevy-inspector-egui = "0.23.2"
 serde = "1.0.183"
 ron = "0.8.0"
