Work on updating bst to support multiple types of maps. Lots of preliminary work converting it to use Lettuces as well as make layers trait driven and customizable by end users. Work still needs to be done figuring out how Cell should be used correctly and trying to lessen excessive generics and make tilemap builder work. Afterwards work needs to be done refactoring to try and make the crate as easy to use as possible. Rn its really complicated

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,6 +33,10 @@ opt-level = 3
 bevy = { version = "0.13", default-features = false, features = [] }
 bst_map_layer_derive = { version = "0.1.0" }
 thiserror = "1.0.44"
+lettuces = { git = "https://github.com/NoahShomette/lettuces.git", features = [
+    "bevy_reflect",
+    "serde",
+] }
 
 # Optional feature based dependencies
 # Rendering with bevy_fast_tilemap - Removed for now since we dont actually do anything with it
