add bevy reflect feature and gate derives behind it

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,9 +14,10 @@ members = ["crates/bst_map_layer_derive"]
 resolver = "2"
 
 [features]
-default = ["serde"]
+default = ["serde", "lettuces/bevy"]
 # bevy_fast_tilemap = ["dep:bevy_fast_tilemap"]
-serde = ["dep:serde", "serde/default", "bevy/serialize"]
+serde = ["dep:serde", "serde/default", "bevy/serialize", "lettuces/serde"]
+reflect = ["lettuces/bevy_reflect"]
 
 [badges]
 maintenance = { status = "actively-developed" }
@@ -33,10 +34,7 @@ opt-level = 3
 bevy = { version = "0.13", default-features = false, features = [] }
 bst_map_layer_derive = { version = "0.1.0" }
 thiserror = "1.0.44"
-lettuces = { git = "https://github.com/NoahShomette/lettuces.git", features = [
-    "bevy_reflect",
-    "serde",
-] }
+lettuces = { git = "https://github.com/NoahShomette/lettuces.git" }
 
 # Optional feature based dependencies
 # Rendering with bevy_fast_tilemap - Removed for now since we dont actually do anything with it
