--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,7 +34,7 @@ opt-level = 3
 bevy = { version = "0.13", default-features = false, features = [] }
 bst_map_layer_derive = { version = "0.1.0" }
 thiserror = "1.0.44"
-lettuces = { git = "https://github.com/NoahShomette/lettuces.git" }
+lettuces = { version = "0.0.2" }
 
 # Optional feature based dependencies
 # Rendering with bevy_fast_tilemap - Removed for now since we dont actually do anything with it
